<resources>
    <string name="app_name">Samolet</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="street">Космонавтов 42</string>
    <string name="address">Введите адрес:</string>
    <string name="entrance">Введите секцию:</string>
    <string name="floor">Введите этаж:</string>
    <string name="apartmentNumber">Введите номер квартиры:</string>
    <string name="save">Сохранить</string>
    <string name="question">Выберите часть квартиры, которую хотите снять:</string>
    <string name="neuralNetwork">Нейросеть</string>
    <string name="byHand">Вручную</string>
    <string name="firstRoom">1 комната</string>
    <string name="kitchen">Кухня</string>
    <string name="Corridor">коридор</string>
    <string name="bathroom">Санузел</string>
    <string name="take_photo">Сделать фото</string>
    <string name="start_capture">Видео</string>
    <string name="stop_capture">Стоп</string>
    <string name="update">Обновите результат</string>
</resources>