<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ApartmentFragment">

    <TextView
        android:id="@+id/textViewAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text="@string/address"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/appCompatTextViewAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewAddress"
        app:layout_constraintStart_toStartOf="@+id/textViewAddress"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddress" />

    <TextView
        android:id="@+id/textViewEntrance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text="@string/entrance"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appCompatTextViewAddress" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/AppCompatTextViewEntrance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewEntrance"
        app:layout_constraintStart_toStartOf="@+id/textViewEntrance"
        app:layout_constraintTop_toBottomOf="@+id/textViewEntrance" />

    <TextView
        android:id="@+id/textViewFloor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:text="@string/floor"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppCompatTextViewEntrance" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/AppCompatTextViewFloor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewFloor"
        app:layout_constraintStart_toStartOf="@+id/textViewFloor"
        app:layout_constraintTop_toBottomOf="@+id/textViewFloor" />

    <TextView
        android:id="@+id/textViewApartmentNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apartmentNumber"
        android:layout_margin="28dp"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppCompatTextViewFloor" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/AppCompatTextViewApartmentNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/textViewApartmentNumber"
        app:layout_constraintStart_toStartOf="@+id/textViewApartmentNumber"
        app:layout_constraintTop_toBottomOf="@+id/textViewApartmentNumber" />

    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="28dp"
        android:textSize="15sp"
        android:text="@string/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/AppCompatTextViewApartmentNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>